2000-12-14  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-server.el (skk-adjust-search-prog-list-for-server-search):
	Use `setq-default' instead of `setq'.

	* skk-tut.el (skk-tutorial): Work for Emacs 18.

2000-12-14  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-viper.el (skk-viper-init-function): New function.
	(skk-mode-hook): Add `skk-viper-init-function' to this hook.
	(skk-cursor-current-color@around@skk-viper-cursor-ad): Use
	`ad-return-value' to set `viper-insert-state-cursor-color'.
	
	* skk-cursor.el (skk-cursor-init-function): New function.
	(skk-mode-hook): Add `skk-cursor-init-function' to this hook.
	(skk-cursor-buffer-local-frame-params-ad-targets): Remove
	`skk-j-mode' from this variable.

	* skk.el (skk-mode-once-again): Removed.
	(skk-require-module): Require skk-cursor first and skk-viper
	second.
	(skk-setup-modeline): Use `save-current-buffer'.

2000-12-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-macs.el (skk-modify-indicator-alist): New function.
	(skk-update-modeline): Call it when optional 2nd arg STRING is
	non-nil.

	* skk-xemacs.el (skk-xemacs-extent-alist): Add default extent.
	(skk-xemacs-prepare-modeline-properties): Refer to the symbol
	values of `skk-cursor-%s-face'.

	* skk.el (skk-make-indicator-alist): Refer to
	`skk-xemacs-extent-alist' for the default extent.
	(skk-make-indicator-alist-1): Under Emacs 21, return the
	propertized string.

2000-12-13  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* experimental/dbm/skk-dbm.el: Require skk-macs and skk-vars
	instead of skk.
        Remove unnecessary spaces between parens.

	* skk-abbrev.el: Remove unnecessary spaces between parens.

	* experimental/rdbms/skk-rdbms.el: Require skk-macs instead of
	skk-forword.
	Remove unnecessary spaces between parens.
	
	* tut-code/skk-tutcode.el (skk-tutcode-display-code-1): Declare
	with defun using `static-cond' instead of `skk-defun-cond'.
	Recognize jisx0213 charset characters.
	Recognize skk-emacs-type mule5.
	